Delete and edit button alignment corrected

--- a/frontend/src/layouts/common/Common.module.css
+++ b/frontend/src/layouts/common/Common.module.css
@@ -1877,6 +1877,7 @@
     display: flex;
     opacity: 0;
     visibility: hidden;
+    align-items: center;
     transition: opacity 0.3s, visibility 0.3s;
     position: absolute;
     right: 0;
